[package]
name = "freertos-sys"
version = "0.1.3"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/freertos-sys"
description = "Builds FreeRTOS from source for specific device families and provides easy linking"
links = "cmsis_rtos2"

categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "freertos",
    "rtos",
    "rtx",
]

[dependencies]
cmsis-rtos2 = "0.1.1"


# to select a supported device family, select one of the following features
[features]
# enable debugging symbols for FreeRTOS itself
dbgsym = []
family-selected = []
# choose ONE of the following
stm32f3x = ["family-selected"]
stm32f4x = ["family-selected"]
stm32f7x = ["family-selected"]
stm32h7x = ["family-selected"]
nrf52x =  ["family-selected"]
